新增异步连接池